Re-working some sections + scheduler
Re-ordered some of the sections and changed some text styles to make it
more legible.

Still need to edit tag-line style to make more legible.

Figure out how to embed scheduler and re-work how scheduler works/info
needed.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OwlFixIT - Repairs By Students, For Students</title>
+    <title>Owl Fix IT - Repairs By Students, For Students</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,18 +46,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">OwlFixIT</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Owl_Fix_IT</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a href='http://owlfixit.schedulista.com'>Schedule Repair</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
+                    
                     <li>
                         <a class="page-scroll" href="#gallery">Gallery</a>
                     </li>
@@ -75,19 +76,20 @@
         <div class="header-content">
             <div class="header-content-inner">
 
-                <h1>OwlFixIT</h1>
-                <hr>
-                <p>Repairs By Students, For Students</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT</h1>
+                <hr class ="sr-intro">
+                <p style="font-family:Arial;" class ="text sr-intro glow">Repairs By Students, For Students</p>
+                <a href='http://owlfixit.schedulista.com' class="btn btn-primary btn-xl page-scroll sr-intro">Schedule Repair</a>
+                <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro">Services</a>
             </div>
         </div>
     </header>
 
-        <section class ="bg-primary" id="about">
+        <section class ="bg-primary" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Who Are We?</h2>
+                    <h2 class="section-heading">Services</h2>
                     <hr class="light">
                 </div>
             </div>
@@ -97,49 +99,37 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-mobile text-default sr-icons"></i>
-                        <h3>Who are we?</h3>
-                        <p>A group of experienced students that carefully fix mobile devices. These repairs are done by students, for students.</p>
+                        <h3></h3>
+                        <p style="font-family:Helvetica Neue;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-wrench text-default sr-icons"></i>
-                        <h3>What do we do?</h3>
-                        <p>With the college student's wallet in mind, we provide cheap and reliable cellphone and tablet repairs.</p>
+                        <h3></h3>
+                        <p style="font-family:Helvetica Neue;">Broken screen? Volume buttons and home button don't work? Someone use your phone as a baseball and smashed it into pieces? Well... maybe not the last one, but we got you covered!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-check-circle-o text-default sr-icons"></i>
-                        <h3>Our Mission</h3>
-                        <p>We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device!</p>
+                        <h3></h3>
+                        <p style="font-family:Helvetica Neue;">We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-6 text-center">
+                    <div class="service-box">
+                        <hr>
+                        <h3 style="font-family:Helvetica Neue;" class ="sr-button">Interested?</h3>
+                        <h3></h3>
+                        <a href='http://owlfixit.schedulista.com' class="btn btn-default btn-xl page-scroll sr-button">Schedule Repair</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <hr>
-                    <p>We specialize in Apple iPhone/iPad and Android phone/tablets replacements:
-                        
-                            <li>Broken LCD/Digitizer</li>
-                            <li>Battery Replacement</li>
-                            <li>Home/Volume/Lock Buttons</li>
-                            <li>Camera</li>
-                            <li>Charging Port/Headphone Jack</li>
-                            <li>and much more!</li>
-                        </p> 
-                    <a href="#contact" class="page-scroll btn btn-primary btn-xl sr-button">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
 
     <section class="no-padding" id="gallery">
@@ -252,9 +242,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Receive a free quote!</h2>
+                    <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
-                    <p>Shoot us a message via call/text or an email to receive a free quote on your repair! We are also available for contact via Facebook on our business page.</p>
+                    <p>Interested in a repair? Want to get in direct contact with us? Want to just say hi? Hit us up on Facebook or call/text us! We will be glad to assist you!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
