--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#repair">Schedule Repair</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
-                    
+                    <li>
+                        <a class="page-scroll" href="#repair">Schedule Repair</a>
+                    </li>
                     <!--<li>
                         <a class="page-scroll" href="#gallery">Gallery</a>
                     </li>-->
@@ -81,10 +80,10 @@
 
                 <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT</h1>
                 <hr class ="sr-intro">
-                <p style="font-family:Arial;" class ="text sr-intro glow">Repairs By Students, For Students</p>
-                <a href='#repair' class="btn btn-primary btn-xl page-scroll sr-intro">Schedule Repair</a>
-                <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro">Services</a>
+                <p style="font-family:Arial;" class ="text sr-intro">Repairs By Students, For Students</p>
+                <a href='#repair' class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Schedule Repair</a>
             </div>
+                <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Services</a>
         </div>
     </header>
 
@@ -104,21 +103,21 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-mobile text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Helvetica Neue;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
+                        <p style="font-family:Arial;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-wrench text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Helvetica Neue;">Broken screen? Volume buttons and home button don't work? Someone use your phone as a baseball and smashed it into pieces? Well... maybe not the last one, but we got you covered!</p>
+                        <p style="font-family:Arial;">Broken screen? Volume buttons and home button don't work? Someone use your phone as a baseball and smashed it into pieces? Well... maybe not the last one, but we got you covered!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-check-circle-o text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Helvetica Neue;">We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device!</p>
+                        <p style="font-family:Arial;">We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device!</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +125,7 @@
                 <div class="col-lg-12 col-md-12 text-center">
                     <div class="service-box">
                         <hr>
-                        <h3 style="font-family:Helvetica Neue;" class ="sr-button">Interested?</h3>
+                        <h3 style="font-family:Arial;" class ="sr-button">Let's fix you up.</h3>
                         <h3></h3>
                         <a href="#repair" class="btn btn-default btn-xl page-scroll sr-button">Schedule Repair</a>
                     </div>
@@ -278,7 +277,7 @@
                   <!--<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">-->
                 </div>
                 <div class="col-sm-9">
-                  <p>Ryan was awesome. Not only was he patient but when an issue arose with the screen he installed, he took care of it immediately on the spot without me having to wait. I would easily recommend these guys over anyone else.</p>
+                  <p style="font-family:Arial;">Ryan was awesome. Not only was he patient but when an issue arose with the screen he installed, he took care of it immediately on the spot without me having to wait. I would easily recommend these guys over anyone else.</p>
                   <small class="text-faded">Keshav Mantha</small>
                 </div>
               </div>
@@ -292,7 +291,7 @@
                   <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10930157_10203439868257973_2139891605360792632_n.jpg?oh=493963cb5f2769cac5d07389f5eced54&oe=57CBE6B3" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Got my charging port and headphone jack replaced only a couple days after I first contacted Owl Fix It. Really fast and reliable service, and Ryan's a super friendly dude.</p>
+                  <p style="font-family:Arial;">Got my charging port and headphone jack replaced only a couple days after I first contacted Owl Fix It. Really fast and reliable service, and Ryan's a super friendly dude.</p>
                   <small class = "text-faded">Ryan Gibbons</small>
                 </div>
               </div>
@@ -306,7 +305,7 @@
                   <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13343013_230503900675372_8473081186740765404_n.jpg?oh=4355438b7c365a52c027be6aef5902d1&oe=57CFDFC8" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Great communication, detailed knowledge of how your phone works, and quick repair time. What more could you ask for? I would definitely come back if I break my phone again.</p>
+                  <p style="font-family:Arial;">Great communication, detailed knowledge of how your phone works, and quick repair time. What more could you ask for? I would definitely come back if I break my phone again.</p>
                   <small class="text-faded">Vince Bellino</small>
                 </div>
               </div>
@@ -331,15 +330,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
-                    <p>Interested in a repair? Want to get in direct contact with us? Want to just say hi? Hit us up on Facebook or call/text us! We will be glad to assist you!</p>
+                    <p style="font-family:Arial;">Interested in a repair? Want to get in direct contact with us? Want to just say hi? Hit us up on Facebook or call/text us! We will be glad to assist you!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>(215) 688-5042</p>
+                    <p style="font-family:Arial;">(215) 688-5042</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <a href="http://www.facebook.com/OwlFixITRepair"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
-                    <a href="http://www.facebook.com/OwlFixITRepair"><p>Facebook</p></a>
+                    <p><a href="http://www.facebook.com/OwlFixITRepair">Facebook</p></a>
                 </div>
             </div> <!--End row-->
         </div> <!--End container-->
