--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="og:description" content="Repairs By Students, For Students">
+    <meta name="author" content="Ryan">
+    <meta property="og:image" content="https://picjumbo.imgix.net/HNCK1202-2.jpg?q=40&w=1650&sharp=30"/>
+    <meta property="og:url"content="http://www.owlfixitrepair.com" />
+    <meta property="og:title" content="Owl Fix IT" />
+
+
+
 
     <title>Owl Fix IT - Repairs By Students, For Students</title>
 
@@ -80,10 +86,11 @@
 
                 <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT</h1>
                 <hr class ="sr-intro">
-                <p style="font-family:Arial;" class ="text sr-intro">Repairs By Students, For Students</p>
-                <a href='#repair' class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Schedule Repair</a>
+                <p style="font-family:Arial;" class ="text sr-intro glow">Repairs By Students, For Students</p>
+                    <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Services</a>
             </div>
-                <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Services</a>
+                    <a href='#repair' class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Schedule Repair</a>
+
         </div>
     </header>
 
@@ -139,7 +146,7 @@
     <div class ="container text-center">
         <h2 class="section-heading text-center">Schedule Repair</h2>
         <hr>
-    <iframe src="https://app.acuityscheduling.com/schedule.php?owner=12478024" width="75%" height="300" frameBorder="0"></iframe>
+    <iframe src="https://app.acuityscheduling.com/schedule.php?owner=12478024" width="90%" height="300" frameBorder="0"></iframe>
 <script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
 </div>  
 
