--- a/index.html
+++ b/index.html
@@ -37,10 +37,27 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- jQuery Plugin -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+
+    <!-- Preloader -->
+    <script type="text/javascript">
+    //<![CDATA[
+        $(window).load(function() { // makes sure the whole site is loaded
+            $('#status').fadeOut(); // will first fade out the loading animation
+            $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
+            $('body').delay(350).css({'overflow':'visible'});
+        })
+    //]]>
+    </script>
 
 </head>
 
 <body id="page-top">
+<!-- Preloader -->
+<div id="preloader">
+    <div id="status">&nbsp;</div>
+</div>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -86,7 +103,7 @@
 
                 <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT</h1>
                 <hr class ="sr-intro">
-                <p style="font-family:Arial;" class ="text sr-intro glow">Repairs By Students, For Students</p>
+                <p style="font-family:Arial;" class ="text sr-intro">Repairs By Students, For Students</p>
                     <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Services</a>
             </div>
                     <a href='#repair' class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Schedule Repair</a>
