ToS and Warranty added/revised

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-mobile text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Arial;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
+                        <p style="font-family:Arial;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -141,7 +141,7 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-check-circle-o text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Arial;">We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device!</p>
+                        <p style="font-family:Arial;">We promise to provide fast and easy repair for clients, working with you to make sure you are 100% satisfied with your device.</p>
                     </div>
                 </div>
             </div>
@@ -356,7 +356,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
-                <p style="font-family:Arial;">Interested in a repair? Want to get in direct contact with us? Want to just say hi? Hit us up on Facebook or call/text us! We will be glad to assist you!</p>
+                <p style="font-family:Arial;">Interested in a repair? Want to get in direct contact with us? Want to just say hi? Shoot us a message on Facebook or call/text us. We will be glad to assist you!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x sr-contact"></i>
@@ -367,17 +367,21 @@
                 <p><a href="http://www.facebook.com/OwlFixITRepair">Facebook</p></a>
             </div>
         </div> <!--End row-->
-
+        </section> <!--End contact-->
 
         <!--ToS and Warranty-->
         <!-- Row -->
+
         <div class="row">
-        <div class="col-lg-2 text-center">
+        <div class="col-lg-1 col-lg-offset-4 text-center some-padding">
                 <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#tos">Terms of Service</button>
             </div>
-            <div class="col-lg-1 text-center">
+            <div class="col-lg-1  col-lg-offset-2 text-center some-padding">
                 <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#warranty">Warranty</button>
             </div>
+
+        </div> <!--End of Row-->
+
             <!-- Modal -->
             <div id="tos" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -431,36 +435,33 @@
                             <h1>Warranty</h1>
                             <p>Last updated: June 15, 2016</p>
 
-                            <p>Thank you for your interest in the products and services of Owl Fix IT.</p>
+                            <p>Thank you for your interest in Owl Fix IT.</p>
 
-                            <p>This Limited Warranty applies to the physical part serviced at the time of repair, and only the physical part serviced, purchased from Owl Fix IT (the "Physical part").</p>
+                            <p>This Limited Warranty is applicable to the physical part (or parts) serviced at the initial time of repair, and only the physical part(s) as serviced or purchased from Owl Fix IT (i.e. "physical part").</p>
 
                             <p><strong>What does this limited warranty cover?</strong></p>
 
-                            <p>This Limited Warranty covers any defects in material or workmanship under normal use during the Warranty Period.</p>
+                            <p>This Limited Warranty covers any flaw in the functionality of the repaired part, or damage as the result of workmanship error, during the Warranty Period.</p>
 
-                            <p>During the Warranty Period, Owl Fix IT will repair or replace, at no charge, products or parts of a product that proves defective because of improper material or workmanship, under normal use and maintenance.</p>
+                            <p>During the Warranty Period, Owl Fix IT will repair or replace, at no additional charge, products or parts of a device that proves defective as a result of improper material or workmanship, under best practices of the device’s repair and use.</p>
 
-                            <p><strong>What will we do to correct problems?</strong></p>
+                            <p><strong>How will Owl Fix It respond to valid warranty claims?</strong></p>
 
-                            <p>Owl Fix IT will either repair the Product at no charge, using new or refurbished replacement parts.</p>
+                            <p>Owl Fix IT will repair the Product at no additional charge. Replacement parts will be new unless new parts are unavailable at the time of repair (e.g. manufacturing of an outdated device has ceased, stock availability is depleted, etc.). The absence of new part availability will result in the replacement use of refurbished parts.</p>
 
-                            <p><strong>How long does the coverage last?</strong></p>
+                            <p><strong>How long does warranty coverage last?</strong></p>
 
-                            <p>The Warranty Period for Physical Goods purchased from Owl Fix IT is 60 days from the date of purchase/date of repair.</p>
+                            <p>The Warranty Period for the Physical Good purchased from, or serviced by, Owl Fix IT is up to, but not extending beyond, 60 days from the date of the initial transaction. Under the circumstance that a repair completed by Owl Fix It proves inefficacious within the initial 60 day period, an ancillary repair will be performed, of no additional charge, to the specific part repaired under the initial transaction.</p>
 
-                            <p>A replacement Physical Good or part assumes the remaining warranty of the original Physical Good or 60 days from the date of replacement or repair, whichever is longer.</p>
+                            <p>A replacement Physical Good or part does not assume the remaining warranty of the original Physical Good. Upon each repair the 60 day warranty period is reset in full.</p>
 
                             <p><strong>What does this limited warranty not cover?</strong></p>
 
-                            <p>This Limited Warranty does not cover any problem that is caused by:
-
-                                ● conditions, malfunctions or damage not resulting from defects in material or workmanship
-                                -This includes damage (i.e. Cracked glass, water damage, etc.) as the result of user error.</p>
+                            <p>This Limited Warranty does not cover damages that are caused by conditions, malfunctions, or damages not resulting from defects in material or workmanship on the behalf of Owl Fix It. This warranty does not include damage as the result of user error (e.g. cracked glass, water damage, “wear-and-tear”, etc.).</p>
 
                                 <p><strong>What do you have to do?</strong></p>
 
-                                <p>To obtain warranty service, you must first contact us to determine the problem and the most appropriate solution for you. Client must provide an Owl Fix IT technician with a photo of the damage (if applicable) and the IMEI number of the device (if applicable).</p>
+                                <p>To obtain warranty service, you must first contact Owl Fix It to determine the damages, desired service, and the most appropriate solution for the device. The client must provide an Owl Fix IT technician with a photo of the damage (if applicable) and the IMEI number of the device (if applicable).</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -469,9 +470,9 @@
 
                     </div>
 
-                </div> <!-- End Row-->
-            </div> <!--End container-->
-        </section> <!--End contact-->
+                </div> 
+ 
+
         <!--End of Contact-->
 
 
