Switch to CDN for font awesome
Changed to a CDN rather than have the files stored locally. Makes for
faster load times

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="myicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,10 +20,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>-->
 
+    <!--Font Awesome-->
+    <script src="https://use.fontawesome.com/151e08d1ef.js"></script>
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
 
@@ -371,13 +371,14 @@
 
         <!--ToS and Warranty-->
         <!-- Row -->
-        <div class="row">
-        <div class="col-lg-2 text-center">
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#tos">Terms of Service</button>
-            </div>
-            <div class="col-lg-1 text-center">
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#warranty">Warranty</button>
-            </div>
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-2   text-center">
+            <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#warranty">Warranty</button>
+        </div>
+        <div class="col-lg-4  text-center">
+            <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#tos">Terms of Service</button>
+        </div>
+            
             <!-- Modal -->
             <div id="tos" class="modal fade" role="dialog">
                 <div class="modal-dialog">
