--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="og:description" content="Repairs By Students, For Students">
-    <meta name="author" content="Ryan">
+    <title>Owl Fix IT - Phone Repairs By Students, For Students</title>
+    <meta name="og:description" content="Owl Fix IT is a repair shop located on Temple University's Campus specializing in the repairing of iPhones, iPads, iPods, and Android devices in the Philadelphia area. Call or schedule a repair to receive a quote today!"/>
+    <meta name="description" content="Owl Fix IT is a repair shop located on Temple University's Campus specializing in the repairing of iPhones, iPads, iPods, and Android devices in the Philadelphia area. Call or schedule a repair to receive a quote today!"/>
+    <meta name="keywords" content="local iPhone repair, iphone screen repair, philadelphia screen repair, philadelphia iPhone repair, phone repair philadelphia, temple phone repair, temple iphone repair, phone repair shop, iPhone repair shop, broken iPhone screen, iPhone repair store, android repair, temple university phone repair, temple university iPhone repair, owlfixit, Owl Fix it repair, iphone repair, phone repair, repair" />
+    <meta name="author" content="Owl Fix It Repair"/>
     <meta property="og:image" content="https://picjumbo.imgix.net/HNCK1202-2.jpg?q=40&w=1650&sharp=30"/>
-    <meta property="og:url"content="http://www.owlfixitrepair.com" />
+    <meta property="og:url" content="http://www.owlfixitrepair.com" />
     <meta property="og:title" content="Owl Fix IT" />
+    <meta name="geo.region" content="US-PA" />
+    <meta name="geo.placename" content="Philadelphia" />
+    <meta name="geo.position" content="39.980825;-75.149579" />
+    <meta name="ICBM" content="39.980825, -75.149579" />
 
-
-
-
-    <title>Owl Fix IT - Repairs By Students, For Students</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-
-    <!-- Custom Fonts -->
-    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>-->
-
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/151e08d1ef.js"></script>
     <!-- Plugin CSS -->
@@ -49,6 +47,18 @@
             $('body').delay(350).css({'overflow':'visible'});
         })
     //]]>
+</script>
+
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/576f032f6e019ccf40e33136/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
 </script>
 
 </head>
@@ -134,7 +144,7 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-wrench text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Arial;">Broken screen? Volume buttons and home button don't work? Someone use your phone as a baseball and smashed it into pieces? Well... maybe not the last one, but we got you covered!</p>
+                        <p style="font-family:Arial;">Broken iPhone screen? Volume buttons and home button don't work? Someone use your Galaxy S6 as a baseball and smash it into pieces? Well... maybe not the last one, but we got you covered!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 text-center">
@@ -353,19 +363,30 @@
 <section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
-                <p style="font-family:Arial;">Interested in a repair? Want to get in direct contact with us? Want to just say hi? Hit us up on Facebook or call/text us! We will be glad to assist you!</p>
+                <p style="font-family:Arial;">Interested in getting that iPhone fixed? Want to get in direct contact with us? Want to just say hi? <br>Hit us up on our social media links or call/text us! We will be glad to assist you!</p>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 text-center">
-                <i class="fa fa-phone fa-3x sr-contact"></i>
-                <p style="font-family:Arial;">(215) 688-5042</p>
+        </div> <!--End row-->
+        <div class="row">
+            <div class="col-lg-3 text-center">
+                <a href="tel:215-688-5042"><i class="fa fa-phone fa-3x sr-contact"></i></a>
+                <p style="font-family:Arial;"><a href="tel:215-688-5042">215-688-5042</a></p>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-3 text-center">
                 <a href="http://www.facebook.com/OwlFixITRepair"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
                 <p><a href="http://www.facebook.com/OwlFixITRepair">Facebook</p></a>
             </div>
+             <div class="col-lg-3 text-center">
+                <a href="https://www.linkedin.com/in/ryan-ross-a4634b100"><i class="fa fa-linkedin fa-3x sr-contact"></i></a>
+                <p><a href="https://www.linkedin.com/in/ryan-ross-a4634b100">LinkedIn</p></a>
+            </div>
+            <div class="col-lg-3 text-center">
+                <a href="https://www.instagram.com/owlfixit/"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
+                <p><a href="https://www.instagram.com/owlfixit/">Instagram</p></a>
+            </div>
+
         </div> <!--End row-->
 
 
@@ -377,6 +398,7 @@
         </div>
         <div class="col-lg-4  text-center">
             <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#tos">Terms of Service</button>
+        </div>
         </div>
             
             <!-- Modal -->
@@ -474,7 +496,6 @@
             </div> <!--End container-->
         </section> <!--End contact-->
         <!--End of Contact-->
-
 
 
         <!-- jQuery -->
