--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Owl Fix IT Repair - Phone Repairs By Students, For Students</title>
+    <meta name="google-site-verification" content="fBE2UXOZ1WFmUYZXqK4vkio0woHi7xTac6V0rhp7Wik" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Owl Fix IT - Phone Repairs By Students, For Students</title>
-    <meta name="og:description" content="Owl Fix IT is a repair shop located on Temple University's Campus specializing in the repairing of iPhones, iPads, iPods, and Android devices in the Philadelphia area. Call or schedule a repair to receive a quote today!"/>
+
+    <meta name="og:description" content="Owl Fix IT is a local repair shop located on Temple University's Campus specializing in the repairing of iPhones, iPads, iPods, and Android devices in the Philadelphia area. Call or schedule a repair to receive a quote today!"/>
+
     <meta name="description" content="Owl Fix IT is a repair shop located on Temple University's Campus specializing in the repairing of iPhones, iPads, iPods, and Android devices in the Philadelphia area. Call or schedule a repair to receive a quote today!"/>
+
     <meta name="keywords" content="local iPhone repair, iphone screen repair, philadelphia screen repair, philadelphia iPhone repair, phone repair philadelphia, temple phone repair, temple iphone repair, phone repair shop, iPhone repair shop, broken iPhone screen, iPhone repair store, android repair, temple university phone repair, temple university iPhone repair, owlfixit, Owl Fix it repair, iphone repair, phone repair, repair" />
+
     <meta name="author" content="Owl Fix It Repair"/>
     <meta property="og:image" content="https://picjumbo.imgix.net/HNCK1202-2.jpg?q=40&w=1650&sharp=30"/>
     <meta property="og:url" content="http://www.owlfixitrepair.com" />
@@ -137,7 +142,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <div class="service-box">
                         <i class="fa fa-5x fa-mobile text-default sr-icons"></i>
                         <h3></h3>
-                        <p style="font-family:Arial;">Offer support for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
+                        <p style="font-family:Arial;">Offer repair services for both Apple and Android products. This applies to all phones, tablets, and computers/laptops that are products of Apple and Android!</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -309,8 +314,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <blockquote>
                   <div class="row">
                     <div class="col-sm-3 text-center">
-                      <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10399625_1305769612773573_5566846971317132264_n.jpg?oh=7e073475c0213e96a4d2461e24f57785&oe=57C6AC2C" style="width: 100px;height:100px;">
-                      <!--<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">-->
+                      <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10399625_1305769612773573_5566846971317132264_n.jpg?oh=7e073475c0213e96a4d2461e24f57785&oe=57C6AC2C" style="width: 100px;height:100px;" alt="Keshav's Repair Experience">
                   </div>
                   <div class="col-sm-9">
                       <p style="font-family:Arial;">Ryan was awesome. Not only was he patient but when an issue arose with the screen he installed, he took care of it immediately on the spot without me having to wait. I would easily recommend these guys over anyone else.</p>
@@ -324,7 +328,7 @@ s0.parentNode.insertBefore(s1,s0);
         <blockquote>
           <div class="row">
             <div class="col-sm-3 text-center">
-              <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10930157_10203439868257973_2139891605360792632_n.jpg?oh=493963cb5f2769cac5d07389f5eced54&oe=57CBE6B3" style="width: 100px;height:100px;">
+              <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10930157_10203439868257973_2139891605360792632_n.jpg?oh=493963cb5f2769cac5d07389f5eced54&oe=57CBE6B3" style="width: 100px;height:100px;" alt="Ryan's Repair Experience">
           </div>
           <div class="col-sm-9">
               <p style="font-family:Arial;">Got my charging port and headphone jack replaced only a couple days after I first contacted Owl Fix It. Really fast and reliable service, and Ryan's a super friendly dude.</p>
@@ -338,7 +342,7 @@ s0.parentNode.insertBefore(s1,s0);
     <blockquote>
       <div class="row">
         <div class="col-sm-3 text-center">
-          <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13343013_230503900675372_8473081186740765404_n.jpg?oh=4355438b7c365a52c027be6aef5902d1&oe=57CFDFC8" style="width: 100px;height:100px;">
+          <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13343013_230503900675372_8473081186740765404_n.jpg?oh=4355438b7c365a52c027be6aef5902d1&oe=57CFDFC8" style="width: 100px;height:100px;" alt="Vince's Repair Experience">
       </div>
       <div class="col-sm-9">
           <p style="font-family:Arial;">Great communication, detailed knowledge of how your phone works, and quick repair time. What more could you ask for? I would definitely come back if I break my phone again.</p>
@@ -366,7 +370,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
-                <p style="font-family:Arial;">Interested in getting that iPhone fixed? Want to get in direct contact with us? Want to just say hi? <br>Hit us up on our social media links or call/text us! We will be glad to assist you!</p>
+                <p style="font-family:Arial;">Interested in getting that iPhone repaired? Want to get in direct contact with us? Want to just say hi? <br>Hit us up on our social media links or call/text us! We will be glad to assist you!</p>
             </div>
         </div> <!--End row-->
         <div class="row">
