--- a/index.html
+++ b/index.html
@@ -358,8 +358,20 @@ s0.parentNode.insertBefore(s1,s0);
 <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
 </div>                          
 </div>
+</div> <!--End of carousel row-->
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <p style="font-family:Arial;">
+        <br>
+
+            Want to submit a review about your repair?
+            <br><br><a href="https://www.yelp.com/biz/owl-fix-it-repair-philadelphia" class="white" target="_blank"><i class="fa fa-yelp fa-3x sr-intro"></i></a>
+            <p>Find us on Yelp!</p>
+
+        </p>
+    </div>
 </div>
-</div>
+</div> <!--end of container-->
 </section>
 <!--End of Reviews-->
 
@@ -379,15 +391,15 @@ s0.parentNode.insertBefore(s1,s0);
                 <p style="font-family:Arial;"><a href="tel:215-688-5042">215-688-5042</a></p>
             </div>
             <div class="col-lg-3 text-center">
-                <a href="http://www.facebook.com/OwlFixITRepair"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
+                <a href="http://www.facebook.com/OwlFixITRepair" target="_blank"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
                 <p><a href="http://www.facebook.com/OwlFixITRepair">Facebook</p></a>
             </div>
              <div class="col-lg-3 text-center">
-                <a href="https://www.linkedin.com/in/ryan-ross-a4634b100"><i class="fa fa-linkedin fa-3x sr-contact"></i></a>
+                <a href="https://www.linkedin.com/in/ryan-ross-a4634b100" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact"></i></a>
                 <p><a href="https://www.linkedin.com/in/ryan-ross-a4634b100">LinkedIn</p></a>
             </div>
             <div class="col-lg-3 text-center">
-                <a href="https://www.instagram.com/owlfixit/"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
+                <a href="https://www.instagram.com/owlfixit/" target="_blank"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
                 <p><a href="https://www.instagram.com/owlfixit/">Instagram</p></a>
             </div>
 
